fixing alignment for sticky columns

--- a/src/components/table/group.css
+++ b/src/components/table/group.css
@@ -1,12 +1,17 @@
 .group-sticky-cols {
     display: flex;
-    /* grid-template-columns: 15px 20px minmax(50px, 400px) 50px; */
-    align-items: center;
     position: sticky;
     left: 0;
     background-color: white;
-    flex-basis: 375px;
     width: 375px;
+    align-items: center;
+
+}
+
+.group-sticky-cols>*:not(.group-sticky-title-header) {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .group-sticky-indicator {
@@ -26,6 +31,7 @@
 .group-sticky-title-header {
     flex-basis: 300px;
     width: 300px;
+    flex-grow: 1;
 }
 
 .group-sticky-details {
